--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jQuery": "^1.7.4",
     "jquery": "^2.1.1",
     "lodash": "^2.4.1",
+    "moment": "^2.8.4",
     "pg": "^4.1.0",
     "request": "^2.51.0",
     "sequelize": "^2.0.0-rc3",
