--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^1.0.0",
     "express": "^4.10.5",
     "express-session": "^1.9.3",
+    "instagram-node-lib": "^0.1.1",
     "lodash": "^2.4.1",
     "moment": "^2.8.4",
     "pg": "^4.1.0",
